Fix group name  broken into 2 lines when there's still a lot of space

--- a/app/assets/stylesheets/modules/modules/_admin_group.scss
+++ b/app/assets/stylesheets/modules/modules/_admin_group.scss
@@ -62,13 +62,21 @@
   }
 
   .groups-list {
+    display: table;
+    width: 100%;
+
+    .group {
+      display: table-row;
+    }
+
     .group-title {
-      float: left;
-      width: 20%;
+      display: table-cell;
+      padding: 5px 0;
     }
 
     .group-host {
-      float: left;
+      display: table-cell;
+      padding: 5px 0;
     }
 
     .group.active {
